Prevent time range filter stacking on small screens
Fixes https://github.com/humanmade/product-dev/issues/1235

--- a/src/accelerate/components/Dashboard.scss
+++ b/src/accelerate/components/Dashboard.scss
@@ -209,11 +209,19 @@ body.index-php {
 
 		.table-search {
 			display: flex;
-			justify-content: flex-start;
+			justify-content: flex-end;
 			position: relative;
+			flex: 0 1 380px;
+
+			label {
+				position: relative;
+				display: block;
+				width: 100%;
+				max-width: 380px;
+			}
 
 			input {
-				width: 380px;
+				width: 100%;
 				background: $color-light-grey;
 				border-color: transparent;
 				border-radius: 10px;
@@ -243,9 +251,11 @@ body.index-php {
 			display: flex;
 			justify-content: flex-start;
 			font-weight: 600;
+			flex: 2;
 
 			&__period {
-				width: 200px;
+				min-width: 120px;
+				flex: 0 1 160px;
 
 				button {
 					&.is-primary {
@@ -263,7 +273,6 @@ body.index-php {
 			}
 
 			&__custom {
-				flex: 1;
 				justify-content: flex-start;
 				gap: 1rem;
 
